feat: Finished assignments
