# swagger_server/service/student_service.py
@@ -1,37 +1,58 @@
-import os
-import tempfile
-from functools import reduce
+from os import environ
 
-from tinydb import Query, TinyDB
+from pymongo import MongoClient, ReturnDocument
 
 from swagger_server.models import Student
 
-db_dir_path = tempfile.gettempdir()
-db_file_path = os.path.join(db_dir_path, "students.json")
-student_db = TinyDB(db_file_path)
-
+CONNECTION_STRING = environ.get('MONGO_URI', 'mongodb://localhost:27017')
+client = MongoClient(CONNECTION_STRING)
 
 def add(student: Student):
     if not student:
         return 'invalid input', 400
 
-    doc_id = student_db.insert(student.to_dict())
-    student.student_id = doc_id
+    # MongoDB makes use of strings as default. The specification wants to use
+    # integers, so we need to generate our own IDs.
+    # For ID generation, the user provided ID is always ignored, and a new ID
+    # is generated by incrementing a counter in the database.
+    next_id = client.students_db.counters.find_one_and_update(
+        {'_id': 'student_id'},
+        {'$inc': {'seq': 1}},
+        upsert=True,
+        return_document=ReturnDocument.AFTER
+    )
+
+    if not next_id:
+        return 'error generating student ID', 500
+
+    student.student_id = next_id['seq']
+    client.students_db.students.insert_one({'_id': student.student_id, **student.to_dict()})
+
     return student.student_id
 
 
 def get_by_id(student_id: int):
-    student = student_db.get(doc_id=int(student_id))
+    student = client.students_db.students.find_one({'_id': student_id})
     if not student:
         return 'not found', 404
-    student_dict = dict(student[0]) if isinstance(student, list) else dict(student)
-    student_dict['student_id'] = student_id
-    return student_dict
+    student['student_id'] = student['_id']
+    return student
 
 
 def delete(student_id: int):
-    student = student_db.get(doc_id=int(student_id))
+    student = client.students_db.students.find_one({'_id': student_id})
     if not student:
         return 'not found', 404
-    student_db.remove(doc_ids=[int(student_id)])
+    client.students_db.students.delete_one({'_id': student_id})
     return student_id
+
+
+def get_average_grade(student_id: int):
+    student = client.students_db.students.find_one({'_id': student_id})
+    if not student:
+        return 'not found', 404
+    grades = student.get('grade_records', [])
+    if not grades:
+        return 'no grades available', 404
+    average = sum([grade['grade'] for grade in grades]) / len(grades)
+    return average
