# swagger_server/swagger/swagger.yaml
@@ -90,6 +90,35 @@ paths:
         "409":
           description: Already exists
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/average_grade:
+    get:
+      summary: Get average grade
+      description: Returns the average grade of the student with specified student_id
+      operationId: get_average_grade
+      parameters:
+        - name: student_id
+          in: path
+          description: the integer
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: number
+            format: integer
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+                x-content-type: application/json
+        "400":
+          description: Invalid ID
+        "404":
+          description: Student does not exist, or has no grade records
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     Student:
